# rich-dataframe

./: pyproject.toml
