[build-system]
requires = [
  "poetry-core>=1.0.0", 
  "setuptools", 
  "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "rich-dataframe"
version = "0.2.1"
description = "Create animated and pretty Pandas Dataframe"
keywords = ['pandas']
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.7"
dependencies = [
  "rich >= 12.5.1",
  "pandas >= 1.4.4",
]

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
packages = ["rich_dataframe"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
